intel/bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/log.txt
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:25:22: error: use of undeclared identifier 'NULL'
    case 945: return NULL;              /* stp --> NULL.  */
                     ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:27:22: error: use of undeclared identifier 'NULL'
    case 940: return NULL;              /* stllrh --> NULL.  */
                     ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:29:22: error: use of undeclared identifier 'NULL'
    case 946: return NULL;              /* ldp --> NULL.  */
                     ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:31:23: error: use of undeclared identifier 'NULL'
    case 1585: return NULL;             /* ldff1b --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:33:23: error: use of undeclared identifier 'NULL'
    case 1641: return NULL;             /* ldff1sw --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:35:23: error: use of undeclared identifier 'NULL'
    case 1589: return NULL;             /* ldff1b --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:37:23: error: use of undeclared identifier 'NULL'
    case 1608: return NULL;             /* ldff1h --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:39:23: error: use of undeclared identifier 'NULL'
    case 1587: return NULL;             /* ldff1b --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:41:23: error: use of undeclared identifier 'NULL'
    case 1606: return NULL;             /* ldff1h --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:43:23: error: use of undeclared identifier 'NULL'
    case 1591: return NULL;             /* ldff1b --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:45:23: error: use of undeclared identifier 'NULL'
    case 1610: return NULL;             /* ldff1h --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:47:23: error: use of undeclared identifier 'NULL'
    case 1631: return NULL;             /* ldff1sh --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:49:23: error: use of undeclared identifier 'NULL'
    case 1619: return NULL;             /* ldff1sb --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:51:23: error: use of undeclared identifier 'NULL'
    case 1650: return NULL;             /* ldff1w --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:53:23: error: use of undeclared identifier 'NULL'
    case 1623: return NULL;             /* ldff1sb --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:55:23: error: use of undeclared identifier 'NULL'
    case 1633: return NULL;             /* ldff1sh --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:57:23: error: use of undeclared identifier 'NULL'
    case 1621: return NULL;             /* ldff1sb --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:59:23: error: use of undeclared identifier 'NULL'
    case 1652: return NULL;             /* ldff1w --> NULL.  */
                      ^
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_opcode_with_main.c:61:23: error: use of undeclared identifier 'NULL'
    case 1597: return NULL;             /* ldff1d --> NULL.  */
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
